# html_message_splitter

./: README.md  makefile  pyproject.toml  split_msg.py
src/: splitter.py
src/exceptions/: fragment_too_long.py
tests/html_files/: test-2.html  test-3.html  test-4.html  test-5.html
tests/unit/commands/: test_split_msg.py
tests/unit/splitter/: test_split_message.py
