[tool.poetry]
name = "maddevs"
version = "0.1.0"
description = ""
authors = ["TAPAKAHOKOT <tapakahokot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
